--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,15 +21,15 @@
                     <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
+                    <!--<li>-->
+                        <!--<a class="page-scroll" href="#portfolio">Portfolio</a>-->
+                    <!--</li>-->
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
+                    <!--<li>-->
+                        <!--<a class="page-scroll" href="#team">Team</a>-->
+                    <!--</li>-->
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -44,8 +44,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
+                <div class="intro-lead-in">Welcome To</div>
+                <div class="intro-heading">Taylor Software</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
