tweaked logo text

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -176,7 +176,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,cursive;
+    font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,cursive;
     color: #{{ site.color.primary }};
 }
 
@@ -861,4 +861,11 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: #{{ site.color.primary }};
+}
+
+tagline {
+    font-family: 'Open Sans';
+    font-size: 14px;
+    color: yellow;
+    float: right;
 }
