about us updated

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/me.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -21,7 +21,9 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Taylor Software is a software development company providing end to end
-                                    application and development solutions.</p>
+                                    application and development solutions. Run by Paul Taylor we have 10years+ experience in
+                                        developing and managing large scale software applications.
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -35,7 +37,9 @@
                                     <h4 class="subheading">What we offer</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">We provide full solutions including the running and maintenace of your software in the cloud</p>
+                                    <p class="text-muted">We provide full end to end solutions including the running
+                                        and maintenance of your software in the cloud. Or we are happy to consult and provide value
+                                        through our knowledge and experience. References available! </p>
                                 </div>
                             </div>
                         </li>
@@ -49,7 +53,8 @@
                                     <h4 class="subheading">Our skills</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Web applications, mobile applications - Java | Databases | iOS | Ruby on rails </p>
+                                    <p class="text-muted">We love building web applications and mobile applications - but we can do a lot more
+                                        Java | Databases MYSQL Postgres NoSQL Oracle| iOS | Ruby on rails | Android | Linux</p>
                                 </div>
                             </div>
                         </li>
@@ -60,10 +65,11 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Why us</h4>
-                                    <h4 class="subheading">We Deliver</h4>
+                                    <h4 class="subheading">Simply - We Deliver!</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">We care about shipping your application to live production and seeing it make a difference!</p>
+                                    <p class="text-muted">We care about shipping your application to a live production environment
+                                        and seeing it make a difference in people lives. </p>
                                 </div>
                             </div>
                         </li>
